[package]
name = "passplexer"
version = "0.1.0"
authors = ["Michael Bednarek <mbednarek360@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen="*"
gloo="*"
blake3="*"
zero85="*"

[dependencies.web-sys]
version = "*"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'Node',
  'Window'
]

[[bin]]
name = "passplexer"
path = "src/lib.rs"
