[package]
name = "passplexer"
version = "0.2.2"
authors = ["Michael Bednarek <mbednarek360@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen="*"
gloo="*"
blake3="*"
zero85="*"

console_error_panic_hook="*"

[dependencies.web-sys]
version = "*"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlSelectElement',
  'Node',
  'Window',
  'ClipboardEvent'
]

[[bin]]
name = "passplexer"
path = "src/lib.rs"
